--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ google-cloud-resource-manager==1.12.5
 google-cloud-secret-manager==2.20.2
 google-cloud-storage==2.18.2
 google-crc32c==1.5.0
-google-generativeai==0.1.0rc1
+google-generativeai==0.1.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.62.0
 greenlet==3.0.1
