--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ fonttools==4.45.1
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
-google-ai-generativelanguage==0.1.0
+google-ai-generativelanguage
 google-api-core==2.19.1
 google-auth==2.34.0
 google-auth-oauthlib==1.2.1
@@ -62,7 +62,7 @@ google-cloud-resource-manager==1.12.5
 google-cloud-secret-manager==2.20.2
 google-cloud-storage==2.18.2
 google-crc32c==1.5.0
-google-generativeai==0.1.0
+google-generativeai
 google-resumable-media==2.7.2
 googleapis-common-protos==1.62.0
 greenlet==3.0.1
